--- a/css/style.css
+++ b/css/style.css
@@ -425,11 +425,16 @@ input[type=checkbox] {
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
+    /*position of tooltip*/
     position: absolute;
-    z-index: 1;
+    /*z-index: 1;
     bottom: 150%;
     left: 50%;
-    margin-left: -60px;
+    margin-left: -60px; */
+    width: 180px;
+    bottom: 100%;
+    left: 50%;
+    margin-left: 170px;
 }
 .tooltip .tooltipindex::after {
     content: "";
@@ -450,9 +455,6 @@ input[type=checkbox] {
 /*End Tooltip index.html styling*/
 
 /*Start contact.html tooltip styling.  This is my special thing.*/
-#anotherspacer{
-    height: 50px;
-}
 .tooltip {
     position: relative;
     display: inline-block;
@@ -467,10 +469,10 @@ input[type=checkbox] {
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
-    z-index: 1;
-    bottom: 150%;
+    width: 120px;
+    bottom: 100%;
     left: 50%;
-    margin-left: -60px;
+    margin-left: 100px;
 }
 .tooltip .tooltipcontact::after {
     content: "";
